# analyseTDO

./: .gitignore  pyproject.toml
analysetdo/: __init__.py  plots.py  reading.py
examples/: complete_plot.py  plot_signal_vs_field.py
tests/: test_analysetdo.py  test_reading.py
