[tool.poetry]
name = "analysetdo"
version = "0.1.0"
description = ""
authors = ["Marie-Eve <marieeve.boulanger.1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.10"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
pylint = "^2.11.1"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
